# steamgamehelper

./: .gitignore  ARCHITECTURE.md  package-lock.json  package.json
browser_helper/: content.js  manifest.json
src/: App.tsx  ScanScreen.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/browser_helper/: content.js  manifest.json
src-tauri/capabilities/: app.json  dialog.json
src-tauri/src/: commands.rs  llm_backend.rs  main.rs
src/assistant/: AskAssistant.tsx  ChatGate.tsx  RawHeuristicsTab.tsx
src/lib/: backend.ts
src/ui/: AnimatedLogo.tsx  AssistantPanel.tsx  LibraryView.tsx  ScanScreen.css  SettingsModal.tsx  palette.ts  providers.ts  styles.css  validateKey.ts
src/ui/brand/: AnimatedLogo.tsx
src/ui/components/: Splash.tsx
src/ui/onboarding/: Onboarding.css  Onboarding.tsx  SettingsGeneralTab.tsx  SettingsLibraryTab.tsx  SettingsModal.tsx  SettingsScanTab.tsx
src/ui/scan/: AssistantPanel.tsx  LibraryView.tsx
