[package]
name = "steamgamehelper"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
# базове
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri 2 + плагіни
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"

# асинхронщина
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# утиліти
once_cell = "1.19"
walkdir = "2.5"
dirs = "5.0"
regex = "1.10"

# HTTP для Steam Web API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Локальна LLM (вмикається фічею "llm")
llama_cpp = { version = "0.3.2", optional = true }
num_cpus = "1.16"

[features]
# Можеш тримати LLM увімкненою за замовчуванням:
default = ["llm"]
llm = ["llama_cpp"]

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

sysinfo = { version = "0.30", features = ["multithread"] }
